--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Sayed Afnan Khazi
-description: Welcome to my page!
+description: A College Student who has been coding for 4+ years and is looking for internship opportunities as a Software Development Engineer. 
 logo: /Afnan-Profile-Picture-April-2022.jpg
